--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,86 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter((inventor) => (inventor.year >= 1500 && inventor.year < 1600));
+
+    console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const fullNames = inventors.map((inventor) => `${inventor.first} ${inventor.last}`);
+
+    console.table(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const ordered = inventors.slice().sort((firstPerson, secondPerson) => {
+      if (firstPerson.year > secondPerson.year) {
+        return 1;
+      } else {
+        return -1;
+      }
+    });
+
+    // Condensed function:
+    // const ordered = inventors.slice().sort((a, b) => a.year > b.year ? 1 : -1);
+
+    console.table(ordered);
+
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+
+    console.log(totalYears);
 
     // 5. Sort the inventors by years lived
+    const lifeLength = inventors.slice().sort((a, b) => {
+      // return (b.passed - b.year) > (a.passed - a.year) ? 1 : -1;
+      if ((b.passed - b.year) > (a.passed - a.year)) {
+        return 1;
+      } else {
+        return -1;
+      }
+    });
+
+    console.table(lifeLength);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const deBoul = links
+    //               .map((link) => link.textContent)
+    //               .filter(streetName => streetName.includes('de'));
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    // const alphaLast = people.slice().sort((a, b) => a.last > b.last ? 1 : -1);
+    const alphaLast = people.slice().sort((a, b) => {
+      const [lastNameA, firstNameA] = a.split(', ');
+      const [lastNameB, firstNameB] = b.split(', ');
+      return lastNameA > lastNameB ? 1 : -1;
+    });
+
+    console.log("Sorted by last name:");
+    console.table(alphaLast);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transportInstances = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {});
+
+    console.log(transportInstances);
 
   </script>
 </body>
